added more content

--- a/README.org
+++ b/README.org
@@ -69,5 +69,14 @@ At Schlumberger Joined as junior field engineer and leaved the company as senior
 | VX Multi Phase Metering   | France _ Paris   | 2008  |
 | SWT / TDA                 | France _ Paris   | 2006  |
 
-
-
+* Self-Initiated Project:
+1) At Schlumberger Created a Database software to track and trace all the equipment certification and generate reports for the upcoming equipment need maintenance.
+2) At OMV Yemen created a database management system with access 2010 which have a one universal window that shows all the information for each well in Habban Field and having all its files attached along with the activities performed/ failure log etc. and can be accessed from the field and Town by using the frontend-backend feature in the access while the Main ACCESS file is stored safely in OMV field server.
+3) Designed a web site for OMV Yemen Habban field using ADOBE Dreamweaver CS5 which contains all the wells and shows a production trend for the whole field along with production rates and statistics for each well, the web site were installed in OMV local server and can be accessed if the used was connected to that server and was not accessed through internet for safety of information.
+4) At OMV Yemen created a Database with ACCESS 2010 to track the Diesel consumption of each vehicle used in Habban field along with calculating the remaining diesel in the tanks and generate monthly reports of the consumption of each vehicle.
+5) At OMV Yemen Once the IT announced the implementation of SharePoint in OMV made the request and created a SharePoint site and called it HabbanFieldSite and implemented all the web site design and information in it (https://2connect-at.omv.com/teams/habbanonline/SitePages/Welcome to OMV Yemen.aspx ), this site is only accessed by OMV employee’s and is being used by the teams in Block S2 Habban Field, Sanaa Office & Dubai Office. All these self-projects were acknowledged by OMV field Manager and Ops Managers in Dubai and I received a mail of appreciation.
+6) At OilSERV Iraq, created a Surface well testing page in SharePoint and created a document library for all the equipment available in the location which each item is grouped by Type/Serial Number, which made all the equipment information available on line. Also enforced all the supervisors to sync their laptops with the SharePoint site so all personnel are updated with the new files and certification.
+7) At OilSERV Iraq, Integrated SharePoint library with QR code which I created a QR label linking the equipment folder and made the laminated labels for each equipment. Using your smart phone you can scan the label on the equipment will take you straight to its folder and can access all the files for that item. This system was acknowledged by OilSERV VP and CEO and the company is working to implement the process to all other business lines.
+8) At OilSERV Started a tutorial online training for the crew using screen flow software and upload the tutorial videos to OilSERV video portal for all locations to access it anytime and help them use EPICOR maintenance software on the go.
+9) At OiLSERV created a database using Access 2013 that capture all the equipment available in the fixed asset and can update every single maintenance record and track the asset history with an easy to generator reports.
+10) At OiLSERV created the same as above but using python & Django
