--- a/README.org
+++ b/README.org
@@ -3,7 +3,6 @@
 #+OPTIONS: toc:nil
 
 * General Information
-
 | Name            | Mohammed Salah Albatati |
 |-----------------+-------------------------|
 | Nationally      | Yemeni                  |
@@ -13,9 +12,10 @@
 | Mail 1          | mohalatati@icloud.com   |
 | Mail 2          | mohalatati@hotmail.com  |
 
+* Education
+Bachelor Degree Majored in Chemical engineering and performed a graduation project of designing a plant to sweet a sour LNG using Di-ethanol Glycol in a absorption column in 2004.
 
 * Carrier Information
-
 | Company              | Duration            | Last Position              | Operation           | Duration |
 |----------------------+---------------------+----------------------------+---------------------+----------|
 | OilSERV - Iraq       | Jan 2017 - Now      | Service Delivery Manager   | Testing & Slickline | 5 Y      |
@@ -24,19 +24,18 @@
 | OMV Yemen            | Jul 2010 - Apr 2013 | Field Production Engineer  | Production          | 3 Y      |
 | Schlumberger - Yemen | Mar 2006 - Jul 2010 | Senior Field Engineer      | Testing             | 4 Y      |
 
-* Summary
+* Overall Summary
+- Currently taking the role of Service delivery manager and acting as operation manager for 8 Testing units and 4 slickline units with a team of 140 crew members employees and consultants, and responsible for the availability of operational equipment’s & competent personnel for our client (DNO, HKN, TAQA, Rosneft & Gazprom), also responsible for the review the monthly PnL.
 
-Currently taking the role of Service delivery manager and acting as operation manager for 8 Testing units and 4 slickline units with a team of 140 crew members employees and consultants, and responsible for the availability of operational equipment’s & competent personnel for our client (DNO, HKN, TAQA, Rosneft & Gazprom), also responsible for the review the monthly PnL.
+- Also worked as Service Quality Coach for the Surface well test & slick line crew ensuring correct execution of best service quality service to our client also in charge of generating service operating procedures SOP in addition to conduct technical training for the crew to on EPICOR software for maintenance services entry.
 
-Also worked as Service Quality Coach for the Surface well test & slick line crew ensuring correct execution of best service quality service to our client also in charge of generating service operating procedures SOP in addition to conduct technical training for the crew to on EPICOR software for maintenance services entry.
+- From 2013 Jun to Dec 2014 was acting as Service delivery manager while keeping my position as Testing Engineer In charge, maintaining and running 8 surface Testing packages with around 85 personnel on board consist of supervisors, chief operators, Data Engineers, Operators and mechanics, making sure all equipment are well maintained for upcoming jobs and select competent crew for each job along with giving full support for ongoing Operation. Conducting field and base audits, reviewing and presenting incident reports to top management on monthly bases, meeting with clients and make packages design and solutions for client requests for Oil production and Testing. Responsible for crew planning in/out the field while maintaining good Relationship with the team, making plan for the equipment Maintenance and certification documentation by implementing my own project of QR code with SharePoint integration.
 
-From 2013 Jun to Dec 2014 was acting as Service delivery manager while keeping my position as Testing Engineer In charge, maintaining and running 8 surface Testing packages with around 85 personnel on board consist of supervisors, chief operators, Data Engineers, Operators and mechanics, making sure all equipment are well maintained for upcoming jobs and select competent crew for each job along with giving full support for ongoing Operation. Conducting field and base audits, reviewing and presenting incident reports to top management on monthly bases, meeting with clients and make packages design and solutions for client requests for Oil production and Testing. Responsible for crew planning in/out the field while maintaining good Relationship with the team, making plan for the equipment Maintenance and certification documentation by implementing my own project of QR code with SharePoint integration.
+- Worked in OMV Yemen as Field Production Engineer since July 2010, responsible in intervention operation for rig and rig-less sites such as Slick line operation supervision, down hole memory gauges setup and programming, PLT & FSI (CoilTubing & Wire Line) program preparation and execution, Optimization of Wells Production in the Block S2 OMV and Completion Natural & ESP installation program preparation and execution.
 
-Worked in OMV Yemen as Field Production Engineer since July 2010, responsible in intervention operation for rig and rig-less sites such as Slick line operation supervision, down hole memory gauges setup and programming, PLT & FSI (CoilTubing & Wire Line) program preparation and execution, Optimization of Wells Production in the Block S2 OMV and Completion Natural & ESP installation program preparation and execution.
+- Also responsible for running SUBPUMP software to analyze the runing ESP wells to meet its designed operating conditions. Also, have the responsibility to update Habban field in model in GAP/PROSPER software every quarter in a workshop meeting. Furthermore, have experience in running PANSYS software to obtain reservoir characterization.
 
-Also responsible for running SUBPUMP software to analyze the runing ESP wells to meet its designed operating conditions. Also, have the responsibility to update Habban field in model in GAP/PROSPER software every quarter in a workshop meeting. Furthermore, have experience in running PANSYS software to obtain reservoir characterization.
-
-At Schlumberger Joined as junior field engineer and leaved the company as senior field testing engineer after getting specialized in Surface well testing & down hole data acquisition and multiphase engineer.
+- At Schlumberger Joined as junior field engineer and leaved the company as senior field testing engineer after getting specialized in Surface well testing & down hole data acquisition and multiphase engineer.
 
 * Overall Carrier Experience:
 1. Well Testing & Data Acquisition
