--- a/README.org
+++ b/README.org
@@ -16,13 +16,13 @@
 Bachelor Degree Majored in Chemical engineering and performed a graduation project of designing a plant to sweet a sour LNG using Di-ethanol Glycol in a absorption column in 2004.
 
 * Carrier Information
-| Company              | Duration            | Last Position              | Operation           | Duration |   |
-|----------------------+---------------------+----------------------------+---------------------+----------+---|
-| OilSERV - Iraq       | Jan 2017 - Now      | Service Delivery Manager   | Testing & Slickline | 5 Y      |   |
-| OilSERV - Iraq       | Jan 2015 - Feb 2017 | Service Quality Coach      | Testing             | 2 Y      |   |
-| OilSERV - Iraq       | Apr 2013 - Dec 2014 | Testing Engineer In Charge | Testing             | 2 Y      |   |
-| OMV Yemen            | Jul 2010 - Apr 2013 | Field Production Engineer  | Production          | 3 Y      |   |
-| Schlumberger - Yemen | Mar 2006 - Jul 2010 | Senior Field Engineer      | Testing             | 4 Y      |   |
+| Company              | Duration            | Last Position              | Operation           | Duration | Logo                 |
+|----------------------+---------------------+----------------------------+---------------------+----------+----------------------|
+| OilSERV - Iraq       | Jan 2017 - Now      | Service Delivery Manager   | Testing & Slickline | 5 Y      | [[./images/oilserv.png]] |
+| OilSERV - Iraq       | Jan 2015 - Feb 2017 | Service Quality Coach      | Testing             | 2 Y      | [[./images/oilserv.png]] |
+| OilSERV - Iraq       | Apr 2013 - Dec 2014 | Testing Engineer In Charge | Testing             | 2 Y      | [[./images/oilserv.png]] |
+| OMV Yemen            | Jul 2010 - Apr 2013 | Field Production Engineer  | Production          | 3 Y      | [[./images/omv.png]]     |
+| Schlumberger - Yemen | Mar 2006 - Jul 2010 | Senior Field Engineer      | Testing             | 4 Y      | [[./images/slb.jpg]]     |
 
 * Overall Summary
 - Currently taking the role of Service delivery manager and acting as operation manager for 8 Testing units and 4 slickline units with a team of 140 crew members employees and consultants, and responsible for the availability of operational equipment’s & competent personnel for our client (DNO, HKN, TAQA, Rosneft & Gazprom), also responsible for the review the monthly PnL.
