--- a/README.org
+++ b/README.org
@@ -76,7 +76,7 @@ Designed a web site for OMV Yemen Habban field using ADOBE Dreamweaver CS5 which
 At OMV Yemen created a Database with ACCESS 2010 to track the Diesel consumption of each vehicle used in Habban field along with calculating the remaining diesel in the tanks and generate monthly reports of the consumption of each vehicle.
 ** OMV Yemen SharePoint
 OMV Yemen Once the IT announced the implementation of SharePoint in OMV made the request and created a SharePoint site and called it HabbanFieldSite and implemented all the web site design and information in it (https://2connect-at.omv.com/teams/habbanonline/SitePages/Welcome to OMV Yemen.aspx ), this site is only accessed by OMV employee’s and is being used by the teams in Block S2 Habban Field, Sanaa Office & Dubai Office. All these self-projects were acknowledged by OMV field Manager and Ops Managers in Dubai and I received a mail of appreciation.
-** OilSERV Surface well testing page in SharePoint [[./images/sharepointsmall.png]]
+** OilSERV Surface well testing page in SharePoint
 In OilSERV Iraq, created a Surface well testing page in SharePoint and created a document library for all the equipment available in the location which each item is grouped by Type/Serial Number, which made all the equipment information available on line. Also enforced all the supervisors to sync their laptops with the SharePoint site so all personnel are updated with the new files and certification.
 ** OilSERV Iraq, Integrated SharePoint library with QR code
 OilSERV Iraq, Integrated SharePoint library with QR code which I created a QR label linking the equipment folder and made the laminated labels for each equipment. Using your smart phone you can scan the label on the equipment will take you straight to its folder and can access all the files for that item. This system was acknowledged by OilSERV VP and CEO and the company is working to implement the process to all other business lines.
