--- a/README.org
+++ b/README.org
@@ -92,4 +92,5 @@ OiLSERV created a database using Access 2013 that capture all the equipment avai
 At OiLSERV created the same date base to track equipment and maintenance using as above but using python & Django
 ** 3d design for filter trap tank using sketchup
 Used google sketchup to design a trap tank for the sand oil and make a prototype for later design
-| [[./images/sand2.png]] | [[./images/sandone.png]] |
+| [[./images/sand2.png]]       | [[./images/sandone.png]]      |
+| [[./images/Sand filter.jpg]] | [[./images/Sand filter2.jpg]] |
