added the streamlit page in the resume

--- a/README.org
+++ b/README.org
@@ -94,3 +94,26 @@ At OiLSERV created the same date base to track equipment and maintenance using a
 Used google sketchup to design a trap tank for the sand oil and make a prototype for later design
 | [[./images/sand2.png]]       | [[./images/sandone.png]]      |
 | [[./images/Sand filter.jpg]] | [[./images/Sand filter2.jpg]] |
+
+* Streamlit data visualizer
+
+This site handles the data used for the operation in OILSERV with several type of equipment such as MPFM from ROXAR, metrolog and spartek down hole gauges as well was a page for simulating the number of trucks to load oil from well site based on the time of loading.
+
+The data can be uploaded to the website of Heruko and it will perform a number of tasks such as:
+
+1. Data visualization
+2. Data averaging and download to csv files
+3. create a correlation plot (for MPFM only)
+4. Graph any axis from the data interactively
+
+Another added feature is to simulate the number of trucks needed to load oil from a well site or a loading station based on the time needed to fill a tanker vs the number of loading stations available.
+
+This project uses the following libraries:
+
+ 1. Streamlit
+ 2. Pandas
+ 3. Numpy
+ 4. Plotly
+ 5. seaboarn
+
+| [[./images/main page scrot.jpg]] |
